unpackaged/main/default/objects/pse__Integration_Hub_Connector_Instances__c/pse__Integration_Hub_Connector_Instances__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings for configuring the Concur - PSA integration.</description>
    <label>Integration Hub Connector: Concur - PSA</label>
</CustomObject>