unpackaged/main/default/objects/pse__Integration_Hub_Connector_Instances__c/fields/pse__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Approval_Status__c</fullName>
    <defaultValue>"Approved"</defaultValue>
    <description>Status that makes an Expense Report in Concur eligible to be sent to PSA.</description>
    <inlineHelpText>Status that makes an Expense Report in Concur eligible to be sent to PSA.</inlineHelpText>
    <label>Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>