unpackaged/main/default/objects/pse__Integration_Hub_Connector_Instances__c/fields/pse__CallBack_Url__c.field-meta.xml
<CustomField>
    <fullName>pse__CallBack_Url__c</fullName>
    <description>DEPRECATED:Oauth Proxy URL in Integration Hub Connector.</description>
    <inlineHelpText>DEPRECATED:Oauth Proxy URL in Integration Hub Connector.</inlineHelpText>
    <label>DEPRECATED:CallBack Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>