unpackaged/main/default/objects/pse__Integration_Hub_Connector_Instances__c/fields/pse__Concur_field_for_Expense_Billable_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Concur_field_for_Expense_Billable_Type__c</fullName>
    <defaultValue>"Is Billable?"</defaultValue>
    <description>Concur custom field for Expense Billable Type.</description>
    <inlineHelpText>Concur custom field for Expense Billable Type.</inlineHelpText>
    <label>Concur field for Expense Billable Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>