unpackaged/main/default/objects/pse__Integration_Hub_Connector_Instances__c/fields/pse__Concur_field_for_PSA_Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Concur_field_for_PSA_Project__c</fullName>
    <defaultValue>"PSA Project"</defaultValue>
    <description>Name of the custom field in Concur for the PSA project, or PSA project and project manager.</description>
    <inlineHelpText>Name of the custom field in Concur for the PSA project. If you want to sync the project manager with the project, enter the name of the PSA Project - Project Manager linked list.</inlineHelpText>
    <label>Concur field for PSA Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>