unpackaged/main/default/objects/pse__Integration_Hub_Connector_Instances__c/fields/pse__Concur_field_for_PSA_Resource_Assignment__c.field-meta.xml
<CustomField>
    <fullName>pse__Concur_field_for_PSA_Resource_Assignment__c</fullName>
    <defaultValue>"PSA Resource-PSA Assignment"</defaultValue>
    <description>The Concur custom field for the PSA Resource-Assignment LinkedList.</description>
    <inlineHelpText>The Concur custom field for the PSA Resource-Assignment LinkedList.</inlineHelpText>
    <label>Concur field for PSA Resource-Assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>