unpackaged/main/default/objects/pse__Integration_Hub_Connector_Instances__c/fields/pse__Concur_Filter_By_Billable_Expenses_Field__c.field-meta.xml
<CustomField>
    <fullName>pse__Concur_Filter_By_Billable_Expenses_Field__c</fullName>
    <defaultValue>"None"</defaultValue>
    <description>Concur filter fields used to filter Expense Report. Possibilities are "None", "IsBillable" and/or "IsPersonal" separated by comma.</description>
    <inlineHelpText>Concur filter fields used to filter Expense Report. Possibilities are "None", "IsBillable" and/or "IsPersonal" separated by comma.</inlineHelpText>
    <label>Concur Filter By Billable Expenses Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>