unpackaged/main/default/objects/pse__Integration_Hub_Connector_Instances__c/fields/pse__Delete_Workflow_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Delete_Workflow_Name__c</fullName>
    <defaultValue>"Delete PSA Project and Assignment in Concur - 2020.400"</defaultValue>
    <description>The name of the formula in the Integration Hub Connector that is used to delete PSA Project and Assignment records in Concur.</description>
    <inlineHelpText>The name of the formula in the Integration Hub Connector that is used to delete PSA Project and Assignment records in Concur.</inlineHelpText>
    <label>Delete Workflow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>