unpackaged/main/default/objects/pse__Integration_Hub_Connector_Instances__c/fields/pse__Expense_Report_Status_Mapping__c.field-meta.xml
<CustomField>
    <fullName>pse__Expense_Report_Status_Mapping__c</fullName>
    <defaultValue>"Approved:Approved"</defaultValue>
    <description>Concur to PSA Expense Report Status Mapping.</description>
    <inlineHelpText>Concur to PSA Expense Report Status Mapping.</inlineHelpText>
    <label>Expense Report Status Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>