unpackaged/main/default/objects/pse__Integration_Hub_Connector_Instances__c/fields/pse__Expenses_Sync_Workflow_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Expenses_Sync_Workflow_Name__c</fullName>
    <defaultValue>"Synchronize Expense Report from Concur to PSA - 2020.400"</defaultValue>
    <description>The name of the formula in the Integration Hub Connector that is used to synchronize Expense Reports with expenses from Concur to FinancialForce.</description>
    <inlineHelpText>The name of the formula in the Integration Hub Connector that is used to synchronize Expense Reports with expenses from Concur to FinancialForce.</inlineHelpText>
    <label>Expenses Sync Workflow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>