unpackaged/main/default/objects/pse__Integration_Hub_Connector_Instances__c/fields/pse__Initial_Sync_Chunk_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__Initial_Sync_Chunk_Size__c</fullName>
    <defaultValue>2000</defaultValue>
    <description>Maximum number of projects, resources, and assignments that are synced in a single initial synchronization chunk.</description>
    <inlineHelpText>Maximum number of projects, resources, and assignments that are synced in a single initial synchronization chunk. An additional chunk is created each time this limit is reached. The default is 2000.</inlineHelpText>
    <label>Initial Sync Chunk Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>