unpackaged/main/default/objects/pse__Integration_Hub_Connector_Instances__c/fields/pse__Oauth_Proxy_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Oauth_Proxy_Name__c</fullName>
    <description>DEPRECATED:OAuth Proxy name in Integration Hub Connector.</description>
    <inlineHelpText>DEPRECATED:OAuth Proxy name in Integration Hub Connector.</inlineHelpText>
    <label>DEPRECATED:Oauth Proxy Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>