unpackaged/main/default/objects/pse__Integration_Hub_Connector_Instances__c/fields/pse__ProjectWorkflowName__c.field-meta.xml
<CustomField>
    <fullName>pse__ProjectWorkflowName__c</fullName>
    <defaultValue>"Synchronize Projects from PSA to Concur - 2020.400"</defaultValue>
    <description>Formula name in Integration Hub Connector to synchronize Projects from FinancialForce to Concur.</description>
    <inlineHelpText>Formula name in Integration Hub Connector to synchronize Projects from FinancialForce to Concur.</inlineHelpText>
    <label>Project Sync Workflow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>