unpackaged/main/default/objects/pse__Integration_Hub_Connector_Instances__c/fields/pse__Resource_Assignment_Sync_Workflow_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Assignment_Sync_Workflow_Name__c</fullName>
    <defaultValue>"Synchronize Resources and Assignments from PSA to Concur - 2020.400"</defaultValue>
    <description>The name of the formula in the Integration Hub Connector that is used to synchronize Resources and Assignments from FinancialForce to Concur.</description>
    <inlineHelpText>The name of the formula in the Integration Hub Connector that is used to synchronize Resources and Assignments from FinancialForce to Concur.</inlineHelpText>
    <label>Resource-Assignment Sync Workflow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>